--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ngrx/router-store": "^8.3.0",
     "@ngrx/store": "^8.3.0",
     "@ngrx/store-devtools": "^8.3.0",
+    "angular-font-awesome": "^3.1.2",
     "concurrently": "^4.1.2",
+    "font-awesome": "^4.7.0",
     "json-server": "^0.15.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
